--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "ioredis": "^5.6.1",
     "joi-extract-type": "^15.0.8",
     "passport-jwt": "^4.0.1",
