--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "class-validator": "^0.14.2",
     "ioredis": "^5.6.1",
     "joi-extract-type": "^15.0.8",
+    "nest-winston": "^1.10.2",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.25"
+    "typeorm": "^0.3.25",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
