feat(database): setup TypeORM with centralized config and entities

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev:docker": "docker-compose --env-file .env.development -f docker-compose.yml -f docker-compose.dev.yml up --build",
-    "down:dev:docker": "docker-compose --env-file .env.development -f docker-compose.yml -f docker-compose.dev.yml down",
+    "start:dev:docker": "docker-compose --env-file=.env.development -f docker-compose.yml -f docker-compose.dev.yml up --build",
+    "down:dev:docker": "docker-compose --env-file=.env.development -f docker-compose.yml -f docker-compose.dev.yml down -v",
     "start:prod:docker": "docker-compose --env-file .env.production -f docker-compose.yml -f docker-compose.prod.yml.yml up --build",
     "down:prod:docker": "docker-compose --env-file .env.production -f docker-compose.yml -f docker-compose.prod.yml.yml down",
     "start:dev:local": "NODE_ENV=local nest start --watch --env-file=.env.development.local",
@@ -37,6 +37,7 @@
     "joi-extract-type": "^15.0.8",
     "nest-winston": "^1.10.2",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25",
