--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start": "nest start",
     "start:dev:docker": "docker-compose --env-file=.env.development -f docker-compose.yml -f docker-compose.dev.yml up --build",
     "down:dev:docker": "docker-compose --env-file=.env.development -f docker-compose.yml -f docker-compose.dev.yml down -v",
-    "start:prod:docker": "docker-compose --env-file .env.production -f docker-compose.yml -f docker-compose.prod.yml.yml up --build",
-    "down:prod:docker": "docker-compose --env-file .env.production -f docker-compose.yml -f docker-compose.prod.yml.yml down",
-    "start:dev:local": "NODE_ENV=local nest start --watch --env-file=.env.development.local",
+    "start:prod:docker": "docker-compose --env-file .env.production -f docker-compose.yml -f docker-compose.prod.yml up --build",
+    "down:prod:docker": "docker-compose --env-file .env.production -f docker-compose.yml -f docker-compose.prod.yml down -v",
+    "start:dev:local": "NODE_ENV=local nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -26,20 +26,22 @@
   },
   "dependencies": {
     "@keyv/redis": "^4.6.0",
+    "@logtail/node": "^0.5.6",
+    "@logtail/winston": "^0.5.6",
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@sideway/address": "^5.0.0",
     "cache-manager": "^7.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "ioredis": "^5.6.1",
-    "joi-extract-type": "^15.0.8",
+    "ioredis": "^5.8.0",
     "ms": "^2.1.3",
     "nest-winston": "^1.10.2",
     "passport-jwt": "^4.0.1",
@@ -48,7 +50,7 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25",
     "winston": "^3.17.0",
-    "zod": "^4.0.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -65,12 +67,14 @@
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "dotenv": "^16.4.5",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "joi": "^17.13.3",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -78,8 +82,10 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript": "^5.7.3"
+  },
+  "overrides": {
+    "glob": "^10.3.10"
   },
   "jest": {
     "moduleFileExtensions": [
