--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@sideway/address": "^5.0.0",
     "cache-manager": "^7.0.1",
+    "chalk": "^5.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ioredis": "^5.8.0",
