--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ioredis": "^5.8.0",
     "ms": "^2.1.3",
     "nest-winston": "^1.10.2",
+    "nestjs-zod": "^5.0.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
