--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
-    "@sideway/address": "^5.0.0",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/terminus": "^11.0.0",
     "cache-manager": "^7.0.1",
     "chalk": "^5.6.2",
     "class-transformer": "^0.5.1",
@@ -58,7 +59,6 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
-    "@nestjs/config": "^4.0.2",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
