--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@keyv/redis": "^4.6.0",
     "@logtail/node": "^0.5.6",
     "@logtail/winston": "^0.5.6",
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -47,7 +48,7 @@
     "chalk": "^5.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "ioredis": "^5.8.0",
+    "ioredis": "^5.8.1",
     "mailtrap": "^4.3.0",
     "mime-types": "^3.0.1",
     "ms": "^2.1.3",
