--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@logtail/node": "^0.5.6",
     "@logtail/winston": "^0.5.6",
     "@nestjs-modules/ioredis": "^2.0.2",
+    "@nestjs/bullmq": "^11.0.3",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -49,13 +50,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ioredis": "^5.8.1",
-    "mailtrap": "^4.3.0",
+    "ipapi.co": "^0.3.0",
+    "mailtrap": "^3.4.0",
     "mime-types": "^3.0.1",
     "ms": "^2.1.3",
     "nest-winston": "^1.10.2",
     "nestjs-url-generator": "^1.0.2",
     "nestjs-zod": "^5.0.1",
-    "nodemailer": "^6.10.1",
+    "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
