--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/nodemailer": "^6.4.20",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.61.0",
     "cache-manager": "^7.0.1",
     "chalk": "^5.6.2",
     "class-transformer": "^0.5.1",
