--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "class-validator": "^0.14.2",
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.8.1",
-    "ipapi.co": "^0.3.0",
+    "ip2location-io-nodejs": "^1.1.1",
     "mailtrap": "^3.4.0",
     "mime-types": "^3.0.1",
     "ms": "^2.1.3",
