--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.901.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
+    "@bull-board/api": "^6.13.0",
+    "@bull-board/express": "^6.13.0",
+    "@bull-board/nestjs": "^6.13.0",
+    "@bull-board/ui": "^6.13.0",
     "@keyv/redis": "^4.6.0",
     "@logtail/node": "^0.5.6",
     "@logtail/winston": "^0.5.6",
@@ -43,6 +47,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestql/bull-board": "^1.0.3",
     "@types/nodemailer": "^6.4.20",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.61.0",
