--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@bull-board/nestjs": "^6.13.0",
     "@bull-board/ui": "^6.13.0",
     "@keyv/redis": "^4.6.0",
+    "@keyv/valkey": "^1.0.10",
     "@logtail/node": "^0.5.6",
     "@logtail/winston": "^0.5.6",
     "@nestjs-modules/ioredis": "^2.0.2",
@@ -52,7 +53,8 @@
     "@types/nodemailer": "^6.4.20",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.61.0",
-    "cache-manager": "^7.0.1",
+    "cache-manager": "^7.2.4",
+    "cache-manager-ioredis": "^2.1.0",
     "chalk": "^5.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -60,6 +62,7 @@
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.8.1",
     "ip2location-io-nodejs": "^1.1.1",
+    "keyv": "^5.5.3",
     "mailtrap": "^3.4.0",
     "mime-types": "^3.0.1",
     "ms": "^2.1.3",
@@ -71,6 +74,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
+    "rate-limiter-flexible": "^8.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25",
@@ -88,6 +92,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^6.0.0",
+    "@types/cache-manager-ioredis": "^2.0.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/mime-types": "^3.0.1",
