--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "ua-parser-js": "^2.0.5",
     "winston": "^3.17.0",
     "xendit-node": "^7.0.0",
+    "zeptomail": "^6.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
