[refactor]: misc cleanup and project-wide adjustments
Update gitignore and eslint config

Refactor main app and health endpoints

Clean up queue constants and module

--- a/package.json
+++ b/package.json
@@ -57,11 +57,17 @@
     "bullmq": "^5.61.0",
     "cache-manager": "^7.2.4",
     "cache-manager-ioredis": "^2.1.0",
+    "camelcase-keys": "^10.0.1",
     "chalk": "^5.6.2",
+    "change-case": "^5.4.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
+    "ejs": "^3.1.10",
+    "hbs": "^4.2.0",
     "http-status-codes": "^2.3.0",
+    "i": "^0.3.7",
     "ioredis": "^5.8.1",
     "ip2location-io-nodejs": "^1.1.1",
     "keyv": "^5.5.3",
@@ -72,6 +78,7 @@
     "nestjs-url-generator": "^1.0.2",
     "nestjs-zod": "^5.0.1",
     "nodemailer": "^7.0.9",
+    "npm": "^11.6.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -79,11 +86,14 @@
     "rate-limiter-flexible": "^8.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "snakecase-keys": "^9.0.2",
+    "type-fest": "^5.2.0",
     "typeorm": "^0.3.25",
     "typescript-eslint": "^8.44.1",
     "ua-parser-js": "^2.0.5",
     "winston": "^3.17.0",
     "xendit-node": "^7.0.0",
+    "yaml": "^2.8.1",
     "zeptomail": "^6.2.1",
     "zod": "^3.23.8"
   },
@@ -98,6 +108,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cache-manager-ioredis": "^2.0.7",
     "@types/express": "^5.0.0",
+    "@types/hbs": "^4.0.5",
     "@types/jest": "^29.5.14",
     "@types/mime-types": "^3.0.1",
     "@types/ms": "^2.1.0",
