--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/lib-storage": "^3.929.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@bull-board/api": "^6.13.0",
     "@bull-board/express": "^6.13.0",
