--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "mime-types": "^3.0.1",
     "ms": "^2.1.3",
     "nest-winston": "^1.10.2",
+    "nestjs-paginate": "^12.8.3",
+    "nestjs-typeorm-paginate": "^4.1.0",
     "nestjs-url-generator": "^1.0.2",
     "nestjs-zod": "^5.0.1",
     "nodemailer": "^7.0.9",
