--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "packageManager": "pnpm@10.23.0",
   "scripts": {
     "seed:plans": "node dist/scripts/seed.js",
     "build": "nest build",
@@ -27,73 +28,60 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.901.0",
-    "@aws-sdk/lib-storage": "^3.929.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@bull-board/api": "^6.13.0",
     "@bull-board/express": "^6.13.0",
     "@bull-board/nestjs": "^6.13.0",
     "@bull-board/ui": "^6.13.0",
     "@keyv/redis": "^4.6.0",
-    "@keyv/valkey": "^1.0.10",
     "@logtail/node": "^0.5.6",
     "@logtail/winston": "^0.5.6",
-    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/axios": "^4.0.1",
-    "@nestjs/bullmq": "^11.0.3",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
-    "@nestql/bull-board": "^1.0.3",
-    "@types/nodemailer": "^6.4.20",
+    "@quazex/nestjs-ioredis": "^1.3.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
-    "bullmq": "^5.61.0",
     "cache-manager": "^7.2.4",
-    "cache-manager-ioredis": "^2.1.0",
     "camelcase-keys": "^10.0.1",
     "chalk": "^5.6.2",
-    "change-case": "^5.4.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
-    "dayjs": "^1.11.18",
-    "ejs": "^3.1.10",
     "hbs": "^4.2.0",
     "http-status-codes": "^2.3.0",
-    "i": "^0.3.7",
     "ioredis": "^5.8.1",
     "ip2location-io-nodejs": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
     "keyv": "^5.5.3",
-    "mailtrap": "^3.4.0",
     "mime-types": "^3.0.1",
     "ms": "^2.1.3",
     "nest-winston": "^1.10.2",
-    "nestjs-paginate": "^12.8.3",
-    "nestjs-typeorm-paginate": "^4.1.0",
     "nestjs-url-generator": "^1.0.2",
     "nestjs-zod": "^5.0.1",
-    "nodemailer": "^7.0.9",
-    "npm": "^11.6.2",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
+    "qs": "^6.14.0",
     "rate-limiter-flexible": "^8.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "snakecase-keys": "^9.0.2",
     "type-fest": "^5.2.0",
     "typeorm": "^0.3.25",
-    "typescript-eslint": "^8.44.1",
     "ua-parser-js": "^2.0.5",
+    "uuid": "^13.0.0",
     "winston": "^3.17.0",
     "xendit-node": "^7.0.0",
     "yaml": "^2.8.1",
@@ -101,27 +89,24 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
+    "@nestjs/bullmq": "^11.0.3",
     "@nestjs/cli": "^11.0.0",
-    "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^6.0.0",
-    "@types/cache-manager-ioredis": "^2.0.7",
-    "@types/express": "^5.0.0",
+    "@types/express": "4",
     "@types/hbs": "^4.0.5",
-    "@types/jest": "^29.5.14",
     "@types/mime-types": "^3.0.1",
     "@types/ms": "^2.1.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
+    "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.20.0",
-    "@typescript-eslint/parser": "^8.20.0",
+    "bullmq": "^5.61.0",
     "dotenv": "^16.4.5",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -130,12 +115,9 @@
     "jest": "^29.7.0",
     "playwright": "^1.56.0",
     "prettier": "^3.4.2",
-    "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3"
   },
   "overrides": {
