--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
+    "google-auth-library": "^10.5.0",
     "hbs": "^4.2.0",
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.8.1",
