feat(channels): implement channels API structure and integrate with URL and user modules
- Add new channels module and DTOs
- Extend repository and entity logic
- Update URL service to support channel linking
- Add user update DTO and controller adjustments
- Refactor analytic worker to support channel analytics
- Cleanup deprecated channel.dto.ts
- Update Dockerfile.dev, docker-compose.dev.yml, entrypoint.dev.sh for dev pipeline

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,6 +31,6 @@ services:
         - action: rebuild
           path: ./package.json
         - action: rebuild
-          path: ./package-lock.json
+          path: ./pnpm-lock.json
         - action: rebuild
           path: ./prisma
