--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,19 +1,37 @@
-FROM node:22-alpine
+FROM node:22-slim AS base
 
-# Use apk for Alpine Linux to install postgresql-client
-RUN apk add --no-cache postgresql-client
+# Enable pnpm (via corepack)
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+RUN corepack enable
+
+# Install required system packages
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        openssl \
+        libssl-dev \
+        libpq-dev \
+        postgresql-client && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-COPY package*.json ./
+# Install dependencies using pnpm with cache mount
+FROM base AS deps
+COPY package*.json pnpm-lock.yaml ./
+RUN --mount=type=cache,id=pnpm-store,target=/pnpm/store \
+    pnpm install --frozen-lockfile
 
-# Install dependencies
-RUN npm install --frozen-lockfile
+# Runtime + dev environment
+FROM base AS dev
+COPY --from=deps /app/node_modules /app/node_modules
 
 COPY . .
 
-EXPOSE 3000
+# Install playwright with dependencies
+RUN pnpm exec playwright install --with-deps --only-shell
 
+# init script
 COPY entrypoint.dev.sh /app/entrypoint.dev.sh
 RUN chmod +x /app/entrypoint.dev.sh
 
