--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
+    "es6-crawler-detect": "^4.0.2",
     "google-auth-library": "^10.5.0",
     "hbs": "^4.2.0",
     "http-status-codes": "^2.3.0",
