--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "hbs": "^4.2.0",
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.8.1",
+    "ip-range-check": "^0.2.0",
     "ip2location-io-nodejs": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "keyv": "^5.5.3",
